// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly for language {
  name: 'Українська',
  code: 'uk',
  path: '/uk',
  dateFormat: 'DD.MM.YYYY'
} 1`] = `
<div>
  <div
    class="header__container"
  >
    <div
      class="header"
    >
      <button
        aria-label="Show menu"
        class="hamburgerMenu "
      >
        <span />
      </button>
      <div
        class="header__menu"
      >
        <nav
          class="navigationBar "
        >
          <a
            activeclassname="active"
            aria-label="Головна"
            class="navigationBar__link"
            href="/uk"
            hreflang="uk"
          >
            Головна
          </a>
          <a
            activeclassname="active"
            aria-label="Бібліотека істот"
            class="navigationBar__link"
            href="/uk/істоти"
            hreflang="uk"
          >
            Бібліотека істот
          </a>
          <a
            activeclassname="active"
            aria-label="Мітки"
            class="navigationBar__link"
            href="/uk/мітки"
            hreflang="uk"
          >
            Мітки
          </a>
          <a
            activeclassname="active"
            aria-label="Про проект"
            class="navigationBar__link"
            href="/uk/about"
            hreflang="uk"
          >
            Про проект
          </a>
          <a
            activeclassname="active"
            aria-label="Пошук"
            class="navigationBar__link"
            href="/uk/search"
            hreflang="uk"
          >
            Пошук
          </a>
        </nav>
      </div>
      <div
        class="header__languages"
      >
        <ul
          class="navigationBarButtons"
        >
          <li
            class="navigationBarButtons__button"
          >
            <button
              class="navigationBarButtons__language "
              title="Change language"
            >
              Українська
            </button>
          </li>
          <li
            class="navigationBarButtons__button"
          >
            <button
              aria-label="Change website color theme"
              title="Theme 'Test Theme', click to change"
            >
              <span
                class="navigationBarButtons__theme"
                role="img"
              >
                ⨀
              </span>
            </button>
          </li>
        </ul>
        <ul
          class="languageMenu "
        >
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link "
              href="/"
              hreflang="en"
            >
              English
            </a>
          </li>
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link "
              href="/ru"
              hreflang="ru"
            >
              Русский
            </a>
          </li>
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link active"
              href="/uk"
              hreflang="uk"
            >
              Українська
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header renders correctly for language { name: 'English', code: 'en', path: '', dateFormat: 'DD/MM/YYYY' } 1`] = `
<div>
  <div
    class="header__container"
  >
    <div
      class="header"
    >
      <button
        aria-label="Show menu"
        class="hamburgerMenu "
      >
        <span />
      </button>
      <div
        class="header__menu"
      >
        <nav
          class="navigationBar "
        >
          <a
            activeclassname="active"
            aria-label="Home"
            class="navigationBar__link"
            href="/"
            hreflang="en"
          >
            Home
          </a>
          <a
            activeclassname="active"
            aria-label="Creatures"
            class="navigationBar__link"
            href="/creatures"
            hreflang="en"
          >
            Creatures
          </a>
          <a
            activeclassname="active"
            aria-label="Tags"
            class="navigationBar__link"
            href="/tags"
            hreflang="en"
          >
            Tags
          </a>
          <a
            activeclassname="active"
            aria-label="About"
            class="navigationBar__link"
            href="/about"
            hreflang="en"
          >
            About
          </a>
          <a
            activeclassname="active"
            aria-label="Search"
            class="navigationBar__link"
            href="/search"
            hreflang="en"
          >
            Search
          </a>
        </nav>
      </div>
      <div
        class="header__languages"
      >
        <ul
          class="navigationBarButtons"
        >
          <li
            class="navigationBarButtons__button"
          >
            <button
              class="navigationBarButtons__language "
              title="Change language"
            >
              English
            </button>
          </li>
          <li
            class="navigationBarButtons__button"
          >
            <button
              aria-label="Change website color theme"
              title="Theme 'Test Theme', click to change"
            >
              <span
                class="navigationBarButtons__theme"
                role="img"
              >
                ⨀
              </span>
            </button>
          </li>
        </ul>
        <ul
          class="languageMenu "
        >
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link active"
              href="/"
              hreflang="en"
            >
              English
            </a>
          </li>
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link "
              href="/ru"
              hreflang="ru"
            >
              Русский
            </a>
          </li>
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link "
              href="/uk"
              hreflang="uk"
            >
              Українська
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Header renders correctly for language { name: 'Русский', code: 'ru', path: '/ru', dateFormat: 'DD.MM.YYYY' } 1`] = `
<div>
  <div
    class="header__container"
  >
    <div
      class="header"
    >
      <button
        aria-label="Show menu"
        class="hamburgerMenu "
      >
        <span />
      </button>
      <div
        class="header__menu"
      >
        <nav
          class="navigationBar "
        >
          <a
            activeclassname="active"
            aria-label="Главная"
            class="navigationBar__link"
            href="/ru"
            hreflang="ru"
          >
            Главная
          </a>
          <a
            activeclassname="active"
            aria-label="Библиотека существ"
            class="navigationBar__link"
            href="/ru/существа"
            hreflang="ru"
          >
            Библиотека существ
          </a>
          <a
            activeclassname="active"
            aria-label="Метки"
            class="navigationBar__link"
            href="/ru/метки"
            hreflang="ru"
          >
            Метки
          </a>
          <a
            activeclassname="active"
            aria-label="О проекте"
            class="navigationBar__link"
            href="/ru/about"
            hreflang="ru"
          >
            О проекте
          </a>
          <a
            activeclassname="active"
            aria-label="Поиск"
            class="navigationBar__link"
            href="/ru/search"
            hreflang="ru"
          >
            Поиск
          </a>
        </nav>
      </div>
      <div
        class="header__languages"
      >
        <ul
          class="navigationBarButtons"
        >
          <li
            class="navigationBarButtons__button"
          >
            <button
              class="navigationBarButtons__language "
              title="Change language"
            >
              Русский
            </button>
          </li>
          <li
            class="navigationBarButtons__button"
          >
            <button
              aria-label="Change website color theme"
              title="Theme 'Test Theme', click to change"
            >
              <span
                class="navigationBarButtons__theme"
                role="img"
              >
                ⨀
              </span>
            </button>
          </li>
        </ul>
        <ul
          class="languageMenu "
        >
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link "
              href="/"
              hreflang="en"
            >
              English
            </a>
          </li>
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link active"
              href="/ru"
              hreflang="ru"
            >
              Русский
            </a>
          </li>
          <li
            class="languageMenu__language"
          >
            <a
              class="languageMenu__link "
              href="/uk"
              hreflang="uk"
            >
              Українська
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
